@@ -51,7 +51,7 @@ public class BookSellerAgent extends Agent {
     public void updateCatalogue(String title, int price) {
 	addBehaviour(new OneShotBehaviour() {
 	    public void action() {
-		catalogue.put(title, new Integer(price));
+		catalogue.put(title, Integer.valueOf(price));
 	    }
 	});
     }
